ansich feddig denke ich aber evtl muss man nohcma nach quelle sehen

--- a/v702/content/durchfuehrung.tex
+++ b/v702/content/durchfuehrung.tex
@@ -1,8 +1,8 @@
 \section{Durchführung}
 \label{sec:Durchführung}
 Für die Durchführung dieses Versuches werden zwei Proben instabiler Isotope benötigt. Dieses Versuchsprotokoll befasst sich mit den Isotopen $\ce{^{52}_{23}V}$ und 
-$\ce{^{104}_{45}}$. Beide Isotope müssen, bevor der Verusch durchgeführt werden kann, durch Neutronenbestrahlung \textit{aktiviert} werden. Dies geschieht in einem dafür
-konstruierten Behälter. $\ce{^{104}_{45}}$ muss sich für mindestens $\qty{20}{\minute}$ in diesem Behälter befinden, bevor damit eine Messung durchgeführt werden kann. 
+$\ce{^{104}_{45}Rh}$. Beide Isotope müssen, bevor der Verusch durchgeführt werden kann, durch Neutronenbestrahlung \textit{aktiviert} werden. Dies geschieht in einem dafür
+konstruierten Behälter. $\ce{^{104}_{45}Rh}$ muss sich für mindestens $\qty{20}{\minute}$ in diesem Behälter befinden, bevor damit eine Messung durchgeführt werden kann. 
 $\ce{^{52}_{23}V}$ muss lediglich $\qty{15}{\minute}$ reaktiviert werden. Sind die Proben einsatzbereit werden diese in die Messapparatur eingesetzt, welche in
 \autoref{fig:Messapparatur} dargestellt wird.  
 
@@ -14,7 +14,7 @@ $\ce{^{52}_{23}V}$ muss lediglich $\qty{15}{\minute}$ reaktiviert werden. Sind d
 \end{figure}
 
 Bevor die Messungen begonnen werden können wird die \textit{Nullzählrate} des Zählrohrs bestimmt. Dazu darf keine Probe in das Zählrohr eingeführt werden. Dann wird eine Messung 
-über $\qty{600}{second}$ durchgeführt. Dabei wird nur über einen Zähler eine Messung aufgenommen. Der daraus resultierende Messwert wird als Hintergundrauschen für die weiteren
+über $\qty{600}{\second}$ durchgeführt. Dabei wird nur über einen Zähler eine Messung aufgenommen. Der daraus resultierende Messwert wird als Hintergundrauschen für die weiteren
 Messungen verwendet.
 
 Die Messung wird nun mit dem Rhodium-Isotrop begonnen. Dazu wird die Probe in das Zählrohr eingeführt und an dem \textit{Zählgerät} wird ein Messzeitintervall 
