--- a/v702/content/auswertung.tex
+++ b/v702/content/auswertung.tex
@@ -90,9 +90,131 @@ Es folgt der Wert $T_\text{V} = \qty{144+-12}{\second}$ für die Halbwertszeit v
 \subsection{Bestimmung der Zerfallseigenschaften von Rhodium}
 \label{subsec:A_Rhodium}
 
+Nun wird der Zerfall des Rhodium-Isotopes ausgewertet. Die Messdaten zu diesem Isotop werden in \autoref{tab:Rhodium} dargestellt. Die Abweichungen der Zählwerte
+verteilen sich gemäß einer Poissonverteilung. Da nur ganzzahlige Zählstände möglich sind werden die Abweichungen auf ganze Zahlen gerundet. Die verwendete Rhodium-Isotop kann 
+den instabilen Zustand über zwei unterschiedliche Zerfälle verlassen, abhängig davon welches Isotop bei der Kernreaktion mit einem Neutron entstanden ist. Die Produkte und
+weiteren Zerfälle wurde bereits in dem \autoref{subsec:Zerfall} diskutiert.
+An dieser Stelle ist es lediglich relevant, dass  $\ce{^{104i}_{45}Rh}$ wesentlich schneller zerfällt, im Vergleich zum langsamen Zerfall des $\ce{^{104}_{45}Rh}$.
+Da die Zählung der Impulse aber nicht zwischen den Zerfällen unterscheidet, muss diese dementsprechend ausgewertet werden. Daher wird zunächst der 
+der Zerfall des langlebigen $\ce{^{104}_{45}Rh}$-Isotopes untersucht.
+
+\subsection{Zerfallsprozess von Rhodium-104}
+\label{subsec:Rh104}
+Die Messdaten des werden in der \autoref{tab:Rhodium} dargestellt. Diese Daten werden nun halblogarithmisch abgebildet, da so die exponentielle Zerfallskurve in eine Gerade
+übergeht. Diese halblogarithmische Darstellung wird in \autoref{fig:Rhodium} abgebildet. Aufgrund der längeren Zerfallsdauer der Rhodium-104-Isotope, muss die daraus 
+resultierende Zerfallskurve in logarithmischer Darstellung eine geringere Steigung haben, als die Zerfallskurve des Rh-104i-Isotops. Da in \autoref{fig:Rhodium} eine Überlagerung
+beider Zerfallskurven dargestellt wird, muss ein logischer \textit{Cut} gefunden werden, ab welchem der Zerfall des Rh-104i-Isotops keinen Effekt mehr hat. Daher wird in der 
+rechten Hälfte der \autoref{fig:Rhodium} eine möglichst lange Gerade gesucht, anhand dessen ein \textit{Cut} festgelegt werden kann. Dieser \textit{Cut} wird bei
+$t^* = \qty{330}{\second}$ festgelegt. Ab diesem Punkt wird nun die Annahme getroffen, dass ausschließlich der Zerfall von Rh-104-Isotopen stattfindet. Daher wird für $t > t^*$
+eine lineare Regression angefertigt. Durch die Parameter der Regression ergeben sich die Zerfallskonstante $\lambda_\text{lang} = \num{2.9(0.4)e-3}$ und ein 
+$N_{0,\text{lang}} = \num{63 +- 14}$.
+
+Daraus ergibt sich gemäß der Formel \eqref{eqn:Halbwertszeit} die Halbwertszeit 
+\begin{equation*}
+  T_\text{Rh, lang} = \qty{238 +- 33}{\second}
+\end{equation*}
+mit einem Fehler gemäß der Gaußschen Fehlerfortpflanzung druch Formel \eqref{eqn:delta_T}.
+
+\begin{table}
+  \caption{Messwerte der Zählrate für Rhodium inklusive der jeweiligen Fehler.}
+  \label{tab:Rhodium}
+  \centering
+  \begin{tabular}{S[table-format = 3.0] S[table-format = 3.0] @{${}\pm{}$} S}
+    \toprule
+    {Messzeit $t/\unit{\second}$} & \multicolumn{2}{c}{Zählrate $N$} \\
+    \midrule
+      0 & 398 & 20 \\
+     15 & 292 & 17 \\
+     30 & 258 & 16 \\
+     45 & 205 & 14 \\
+     60 & 183 & 14 \\
+     75 & 161 & 13 \\
+     90 & 128 & 11 \\
+    105 & 127 & 11 \\
+    120 & 117 & 11 \\
+    135 &  79 &  9 \\
+    150 &  71 &  8 \\
+    165 &  76 &  9 \\
+    180 &  62 &  8 \\
+    195 &  61 &  8 \\
+    210 &  56 &  7 \\
+    225 &  41 & 6 \\
+    240 &  47 & 7 \\
+    255 &  42 & 6 \\
+    270 &  44 & 7 \\
+    285 &  32 & 6 \\
+    300 &  33 & 6 \\
+    315 &  30 & 5 \\
+    330 &  30 & 5 \\
+    345 &  37 & 6 \\
+    360 &  35 & 6 \\
+    \bottomrule
+  \end{tabular}
+  \begin{tabular}{S[table-format = 3.0] S[table-format = 2.0] @{${}\pm{}$} S}
+    \toprule
+    {Messzeit $t/\unit{\second}$} & \multicolumn{2}{c}{Zählrate $N$} \\
+    \midrule
+    375 &  33 & 6 \\
+    390 & 27 & 5 \\
+    405 & 30 & 5 \\
+    420 & 13 & 4 \\
+    435 & 23 & 5 \\
+    450 & 25 & 5 \\
+    465 & 23 & 5 \\
+    480 & 22 & 5 \\
+    495 & 27 & 5 \\
+    510 & 25 & 5 \\
+    525 & 19 & 4 \\
+    540 & 16 & 4 \\
+    555 & 18 & 4 \\
+    570 & 22 & 5 \\
+    585 & 19 & 4 \\
+    600 & 20 & 4 \\
+    615 & 13 & 4 \\
+    630 & 11 & 3 \\
+    645 & 17 & 4 \\
+    660 & 22 & 5 \\
+    675 & 18 & 4 \\
+    690 & 19 & 4 \\
+    705 & 18 & 4 \\
+    720 & 15 & 4 \\
+    \bottomrule
+    \\
+  \end{tabular}
+\end{table}
+
+\subsection{Zerfall von Rhodium-104i}
+\label{subsec:Rh104i}
+
+Nun kann die Zerfallskurve von Rh-104i untersucht werden. Damit nun die reine Zerfallskurve der Rh-104i-Isotope betrachtet werden kann muss mittels der im \autoref{subsec:Rh104}
+bestimmten Halbwärtszeit eine Anpassung der Messwerte vorgenommen werden. Außerdem ist der mittlere Bereich der Messung nicht geeignet für eine Betrachtung, da die 
+Vermischung der beiden Zerfälle dort am größten ist. Daher werden nun lediglich Messwerte bis zu einem festgelegten $t_\text{max}$ betrachtet. Es wird ein 
+$t_\text{max} = \qty{270}{\second}$ gewählt. Die Anpassung der Messwerte wird nun über eine Differenz der Gesamtanzahl aller Isotope zur Anzahl der Rh-104-Isotope bestimmt.
+Daher ergibt sich
+\begin{equation*}
+  N_{\text{kurz}}(t) = N_\text{Ges}(t) - N_\text{lang}(t) = N_\text{Ges}(t) -  N_{0,\text{lang}}e^{-\lambda_\text{lang}t}
+\end{equation*}
+
+Der Unsicherheit dieser Anpassung ergibt sich gemäß der Gaußschen Fehlerfortpflanzung durch 
+\begin{equation*}
+  \label{eqn:delta_kurz}
+  \symup{\Delta}N_\text{kurz}(t) = \sqrt{\left(\symup{\Delta}N_\text{Ges}\right)^2 + \left(tN_{0,\text{lang}}e^{-\lambda_\text{lang}t}\right)^2(\symup{\Delta}\lambda_\text{lang})^2 + \left(N_{0,\text{lang}}e^{-\lambda_\text{lang}t}\right)^2(\symup{\Delta}N_{0,\text{lang}})^2}
+\end{equation*}
+
+Nun wird eine lineare Regression auf die korregierten Messwerte angewendet. Dabei ergeben sich aus den Parametern der Regression 
+\begin{align*}
+  \lambda_\text{kurz} &= \num{15.5(0.7)e-3} \\
+  N_{0, \text{kurz}} &= \num{306(31)} 
+\end{align*}
+Die Abweichungen ergeben sich gemäß der bereits verwendeten Fehlerformeln.
 \begin{figure}
   \centering
   \includegraphics{Rhodium.pdf}
-  \caption{Plot.}
+  \caption{In dieser Abbildung sind die Messwerte samt Regressionen und signifikanten Bereichen dargestellt. Erstellt mit \textit{matplotlib} \cite{matplotlib}.}
   \label{fig:Rhodium}
 \end{figure}
+
+Daraus kann nun gemäß der Formel \eqref{eqn:Halbwertszeit} mit dem bereits verwendeten Fehler eine Halbwertszeit 
+\begin{equation*}
+  T_\text{Rh, lang} = \qty{44.7+-1.9}{\second}.
+\end{equation*}
