cite gemacht :DDDDDDD

--- a/lit.bib
+++ b/lit.bib
@@ -211,3 +211,15 @@
 	urldate      = {2022-06-22},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977247/mod_resource/content/2/V702.pdf},
 }
+
+@online{104iRh,
+  titel = {Daten und Eigenschaften des Isotops Rh-104},
+  url = {https://www.internetchemie.info/isotop.php?Kern=Rh-104#:~:text=Halbwertszeit%20HWZ%20%3D%2042%2C3(,%C3%97%20101%20Sekunden%20s.},
+  urldate = {2022-06-01}
+}
+
+@online{Zerfall,
+  titel = {Das Periodensystem der Elemente online},
+  url = {https://www.periodensystem-online.de/index.php?id=isotope&el=23&mz=52&show=nuklid},
+  urldate = {2022-06-01}
+}
