--- a/v702/content/diskussion.tex
+++ b/v702/content/diskussion.tex
@@ -1,18 +1,18 @@
 \section{Diskussion}
 \label{sec:Diskussion}
 Zunächst wird das Vanadium-Isotop betrachtet. Bei diesem wurde eine wurde eine Halbwertszeit $T_{text{V}} = \qty{144(12)}{\second}$ bestimmt. In der Literatur gilt für dieses 
-Vanadium-Isotop eine Halbswertszeit von $T_\text{V, lit} = \qty{224}{\second}$. Daraus ergibt sich eine Abweichung von $\symup{\Delta}T_{text{V}} = \qty{36}{\percent}$.
+Vanadium-Isotop eine Halbswertszeit von $T_\text{V, lit} = \qty{224}{\second}$\cite{Zerfall}. Daraus ergibt sich eine Abweichung von $\symup{\Delta}T_{text{V}} = \qty{36}{\percent}$.
 Diese Abweichung ist relativ groß und kann nicht ausschließlich durch satistische Abweichungen begründet werden. Der wahrscheinlichste Grund für diese Abweichung ist, dass 
 die Probe vor Messbeginn nicht ausreichend reaktiviert wurde, obgleich die vorgeschriebene Zeit eingehalten wurde. Außerdem kommen noch Unsicherheiten durch Totzeiten
 des Zählrohres hinzu. 
 
 Für das Rhodium-104-Isotop wurde eine Halbwertszeit $T_\text{Rh, lang} = \qty{238(33)}{\second}$ bestimmt. Zu diesem Zerfall lautet der Literaturwert 
-$T_\text{Rh,lang,lit} = \qty{260}{\second}$. Daher weicht der errechnete Wert um $\symup{\Delta}T_\text{Rh, lang} = \qty{8}{\percent}$ von dem Literaturwert ab.
+$T_\text{Rh,lang,lit} = \qty{260}{\second}$\cite{Zerfall}. Daher weicht der errechnete Wert um $\symup{\Delta}T_\text{Rh, lang} = \qty{8}{\percent}$ von dem Literaturwert ab.
 Diese Abweichung ist klein genug, damit sie im Unsicherheitsbereich liegt und somit als qualitativ angesehen werden kann. Mögliche Gründe für die Abweichung stellen jedoch 
 trotzdem die Wahl des \textit{Cuts}, sowie die Totzeit des Zählrohres dar.
 
 Zuletzt wird nun die Halbwertszeit des Rh-104i-Isotops betrachtet. Diese ergab sich zu $T_\text{Rh, kurz} = \qty{44.7(1.9)}{\second}$. Mit dem Literaturwert 
-$T_\text{Rh, kurz, lit} = \qty{42.3}{\second}$ ergibt sich eine Abweichung von $\symup{\Delta}T_\text{Rh, kurz} = \qty{6}{\percent}$. Diese Abweichung ist ähnich klein wie die 
+$T_\text{Rh, kurz, lit} = \qty{42.3}{\second}$\cite{104iRh} ergibt sich eine Abweichung von $\symup{\Delta}T_\text{Rh, kurz} = \qty{6}{\percent}$. Diese Abweichung ist ähnich klein wie die 
 des Rh-104-Isotopes und unterliegt den gleichen Unsicherheiten.
 
 Zusammenfassend konnten die Halbswertszeiten der Isotope zufriedenstellend genau bestimmt werden.
