--- a/v702/content/diskussion.tex
+++ b/v702/content/diskussion.tex
@@ -1,18 +1,26 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Zunächst wird das Vanadium-Isotop betrachtet. Bei diesem wurde eine wurde eine Halbwertszeit $T_{text{V}} = \qty{144(12)}{\second}$ bestimmt. In der Literatur gilt für dieses 
-Vanadium-Isotop eine Halbswertszeit von $T_\text{V, lit} = \qty{224}{\second}$\cite{Zerfall}. Daraus ergibt sich eine Abweichung von $\symup{\Delta}T_{text{V}} = \qty{36}{\percent}$.
+Zunächst wird das Vanadium-Isotop betrachtet. Bei diesem wurde eine Halbwertszeit $T_{\text{V}} = \qty{144(12)}{\second}$ bestimmt. In der Literatur gilt für dieses 
+Vanadium-Isotop eine Halbswertszeit von $T_\text{V, lit} = \qty{224}{\second}$ \cite{Zerfall}. Daraus ergibt sich eine Abweichung von $\symup{\Delta}T_{\text{V}} = \qty{36}{\percent}$.
+Die Abweichung eines Messwertes $x$ zu einem Literaturwert $x^*$ kann dabei über die Gleichung
+\begin{equation}
+    \symup{\Delta}x = \frac{|x - x^*|}{x^*}
+\end{equation}
+bestimmt werden.
 Diese Abweichung ist relativ groß und kann nicht ausschließlich durch satistische Abweichungen begründet werden. Der wahrscheinlichste Grund für diese Abweichung ist, dass 
-die Probe vor Messbeginn nicht ausreichend reaktiviert wurde, obgleich die vorgeschriebene Zeit eingehalten wurde. Außerdem kommen noch Unsicherheiten durch Totzeiten
-des Zählrohres hinzu. 
+die Probe vor Messbeginn nicht ausreichend reaktiviert wurde, obgleich die vorgeschriebene Zeit eingehalten wurde. Ebenfalls wirken sich die sehr geringen Zählraten mancher
+Messwerte stark aus, was auch an den Fehlerbalken in \autoref{fig:Vanadium} festgestellt werden kann. Einige Werte weichen stark von der Ausgleichsgeraden ab, schneiden diese 
+jedoch in ihrem Fehlerbereich. 
+
 
 Für das Rhodium-104-Isotop wurde eine Halbwertszeit $T_\text{Rh, lang} = \qty{238(33)}{\second}$ bestimmt. Zu diesem Zerfall lautet der Literaturwert 
-$T_\text{Rh,lang,lit} = \qty{260}{\second}$\cite{Zerfall}. Daher weicht der errechnete Wert um $\symup{\Delta}T_\text{Rh, lang} = \qty{8}{\percent}$ von dem Literaturwert ab.
-Diese Abweichung ist klein genug, damit sie im Unsicherheitsbereich liegt und somit als qualitativ angesehen werden kann. Mögliche Gründe für die Abweichung stellen jedoch 
-trotzdem die Wahl des \textit{Cuts}, sowie die Totzeit des Zählrohres dar.
+$T_\text{Rh,lang,lit} = \qty{260}{\second}$ \cite{Zerfall}. Daher weicht der errechnete Wert um $\symup{\Delta}T_\text{Rh, lang} = \qty{8}{\percent}$ von dem Literaturwert ab.
+Diese Abweichung ist klein genug, damit sie im Unsicherheitsbereich liegt und somit als qualitativ angesehen werden kann. Gründe für die Abweichung sind demnach vor allem 
+die allgemeine Messunsicherheit durch die vergleichsweise kleinen Zählraten.
 
 Zuletzt wird nun die Halbwertszeit des Rh-104i-Isotops betrachtet. Diese ergab sich zu $T_\text{Rh, kurz} = \qty{44.7(1.9)}{\second}$. Mit dem Literaturwert 
-$T_\text{Rh, kurz, lit} = \qty{42.3}{\second}$\cite{104iRh} ergibt sich eine Abweichung von $\symup{\Delta}T_\text{Rh, kurz} = \qty{6}{\percent}$. Diese Abweichung ist ähnich klein wie die 
+$T_\text{Rh, kurz, lit} = \qty{42.3}{\second}$ \cite{104iRh} ergibt sich eine Abweichung von $\symup{\Delta}T_\text{Rh, kurz} = \qty{6}{\percent}$. Diese Abweichung ist ähnich klein wie die 
 des Rh-104-Isotopes und unterliegt den gleichen Unsicherheiten.
 
-Zusammenfassend konnten die Halbswertszeiten der Isotope zufriedenstellend genau bestimmt werden.
+Zusammenfassend konnten die Halbswertszeiten der Rhodium-Isotope zufriedenstellend genau bestimmt werden. Die experimentell bestimmte Halbswertszeit von Vanadium
+weicht jedoch stark von dem genannten Literaturwert ab.
