--- a/v702/content/theorie.tex
+++ b/v702/content/theorie.tex
@@ -49,11 +49,11 @@ und Rhodium- ($\ce{^{104}_{45}Rh}$) Isotope folgen die Zerfälle den Gleichungen
 Wie bereits in der Einleitung erwähnt wurde, werden in diesem Versuch vergleichsweise geringe Halbwertszeiten im Bereich von Sekunden bis Stunden ermittelt. Da bei solchen 
 Halbwertszeiten bereits nach geringer Zeit ein Großteil der instabilen Kerne zerfällt, müssen die Proben unmittelbar vor dem Durchführen des Versuches hergestellt werden.
 Dies wird mithilfe der Aktivierung mit Neutronen erreicht.
-Dabei werden (langsame) Neutronen auf einen stabilen Kern geschossen. Dringt ein Neutron in einen Kern ein, ensteht ein angeregeter Zwischenkern, der auch \textit{Compoundkern}
+Dabei werden (langsame) Neutronen auf einen stabilen Kern geschossen. Dringt ein Neutron in einen Kern ein, entsteht ein angeregeter Zwischenkern, der auch \textit{Compoundkern}
 genannt wird. Durch die kinetische Energie und die Bindungsenergie des zugefügten Neutrons gehen die Nukleonen des Kerns in höhere Energiezustände über. Dies wird als 
-\textit{Aufheizung} des Zwischenkerns bezeichnet. Durch Emission eines $\gamma$-Quants fällt der Kern nach kurzer Zeit (etwa $\qty{10e-16}{\second}$) wieder in den Grundzustand 
+\textit{Aufheizung} des Zwischenkerns bezeichnet. Durch Emission eines $\gamma$-Quants fällt der Kern nach kurzer Zeit (etwa $\qty{1e-16}{\second}$) wieder in den Grundzustand 
 zurück. Da nun ein Neutron mehr vorhanden ist, ist der neue Kern meist instabil. Unter Emission eines Elektrons ($\beta$-Strahlung) kann er sich (eventuell über mehrere Prozesse)
-in einen stabilen Kern umwandeln. Diese Kernreaktionen werden für einen Allgemienen Kern A mit Ordnungszahl $z$ und Massenzahl $m$ durch die Gleichungen aus 
+in einen stabilen Kern umwandeln. Diese Kernreaktionen werden für einen Allgemeinen Kern A mit Ordnungszahl $z$ und Massenzahl $m$ durch die Gleichungen aus 
 \autoref{fig:Zerfall_2} beschrieben.
 
 \begin{figure}
